graphql-parser/tests/snapshots/tests__parse_query__named_query__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Operation(
                OperationDefinition {
                    position: Pos(1:1),
                    kind: Query,
                    description: None,
                    name: Some(
                        "Foo",
                    ),
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        span: (
                            Pos(1:11),
                            Pos(3:1),
                        ),
                        items: [
                            Field(
                                Field {
                                    position: Pos(2:3),
                                    alias: None,
                                    name: "field",
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        span: (
                                            Pos(2:3),
                                            Pos(2:3),
                                        ),
                                        items: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ],
    },
)
